--- a/coffee-house/src/sass/layout/_mobile-app.scss
+++ b/coffee-house/src/sass/layout/_mobile-app.scss
@@ -2,10 +2,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
     gap: 100px;
 
     margin-bottom: 100px;
+
+    @media screen and (max-width: 1230px) {
+        flex-wrap: wrap;
+    }
 }
 .mobile-app h2 {
     text-align: left;
